fix: remove some properties in order to avoid overflow-x scroll

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,9 @@
-@use './base/variables';
-@use './base/reset';
-@use './layout/page';
-@use './base/scrollbar';
+@use "./base/variables";
+@use "./base/reset";
+@use "./layout/page";
+@use "./base/scrollbar";
 
 body {
-	font-family: 'Poppins', sans-serif;
-	overflow-x: hidden;
-	width: 100vw;
-	height: 100%;
+	font-family: "Poppins", sans-serif;
 	background-color: #1b0221;
 }
